# graphics-pipeline

./: .gitignore  CMakeLists.txt  Camera Notes  Exam Notes  GRAPH.tiff  Lighting Notes  README.txt  Triangle Notes  taking-videos.txt
geometry/: camera_path.txt  cat.tif  path-01.txt  path-02.txt  path-03.txt  path-04.txt  uffizi_back.tiff
geometry/frames/: frame_0.tif  frame_1.tif  frame_10.tif  frame_13.tif  frame_14.tif  frame_16.tif  frame_2.tif  frame_3.tif  frame_4.tif  frame_5.tif  frame_6.tif  frame_7.tif  frame_8.tif  frame_9.tif
notes/: Camera Notes  Environment Mapping Notes  Exam Notes  Hardware Notes  Reflection Notes  Texture Notes
src/: aabb.hpp  color.hpp  cube_map.cpp  cube_map.hpp  font.cpp  font.hpp  frame_buffer.cpp  frame_buffer.hpp  gl.cpp  gl.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_scene.hpp  ppcamera.cpp  ppcamera.hpp  scene.hpp  window.cpp  window.hpp  window_group.cpp  window_group.hpp
src/games/: pong.hpp
src/math/: common.hpp  m3.cpp  m3.hpp  v3.cpp  v3.hpp
src/scenes/: camera_demo.cpp  camera_demo.hpp  envmapping.cpp  envmapping.hpp  hardware_demo.cpp  hardware_demo.hpp  mesh_lighting.cpp  mesh_lighting.hpp  pong.cpp  pong.hpp  primitives.cpp  primitives.hpp  rotation_graph.cpp  rotation_graph.hpp  scrolling_name.cpp  scrolling_name.hpp  shadows.cpp  shadows.hpp  tetris.cpp  tetris.hpp  texture_demo.cpp  texture_demo.hpp
